--- a/index_solucoes.html
+++ b/index_solucoes.html
@@ -47,7 +47,7 @@
         <div class="objetivos_title">
             Objetivos <br>
         </div>
-        <p class="texto"> Nós temos uma visão visando um mundo mais ecológico e sustentável. Buscamos que nossos
+        <p class="texto"> Nós temos uma visão que busca um mundo mais ecológico e sustentável. Buscamos também que nossos
             projetos e metas sejam colocadas em práticas e bem-sucedidas. </p>
     </div>
     <div class="solucoes">
